--- a/index.html
+++ b/index.html
@@ -2,15 +2,109 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Sambeo</title>
-    <link rel="icon" href="image/favicon.ico" type="image/x-icon"/>
+  <meta charset="UTF-8" />
+  <title>Sambeo</title>
+  <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link href="/index.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>
-        Hellu I'm Sambeo
-    </h1>
+  <!-- Navbar -->
+  <nav>
+    <ul class="nav">
+      <li class="nav-item col-3">
+        <a class="nav-link" href="#">Sambeo</a>
+      </li>
+      <li class="nav-item col-3">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item col-3">
+        <a class="nav-link" href="#">Typeface</a>
+      </li>
+      <li class="nav-item col-3">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- Introduce -->
+  <div class="introduce">
+    <div class="text-center">
+      <h1>Sambeo (Thu Phuong Nguyen Hong) is a multidisciplinary designer based in Vietnam — Germany, who loves to share and make workshops. She is also co-founder of Fustic.Studio & RiceorDie.</h1>
+      <br>
+      <h1><i class="bi-arrow-down" style="font-size: 2.5rem;"></i>
+      </h1>
+    </div>
+    <div class="d-flex justify-content-between">
+      <div class="description">
+        <h2>— Focus on: Corporate Design Type Design Visual & Motion Design</h2>
+      </div>
+      <div class="description">
+        <h2>“I'm not afraid of the unknown. Life is change, and I adapt. That's how I grow.”</h2>
+      </div>
+    </div>
+  </div>
+  <!-- Thumbnails -->
+  <div class="row gx-2 gy-2 mx-1">
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/800/q/94/i/b19ce1aa7e2d1daba59156be524eafe7b9ce6a879a40f88aa491a0481265e7a3/Nuevo-Rico-3.gif">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/800/q/94/i/2cac6e4505ee5f86951370125502e342b14832df43a502403196a5d7d1304470/MoveTheSystem-1_3.gif">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/d4c4e7ec630f138409c8e00aa9736ad31c16ab4cf9b861f5a8d385ec5dd78820/Layout_01-01.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/ef033c1e1b7b074279e7528b85c02c5670c74567c555fe0f5f932a9807a30ed4/supporting-material-04.jpg">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/97196568c4a6babedf932cc13f3efd9a94b0b566b678e69e387c4b311a5c0623/Screen-Shot-2021-09-13-at-10.15.59.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/6cb818cf007e424440136d8ee479c1a062782ccc963427d1f9eb813e9b549c2c/1_cover.jpeg">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/5189336ff2ed5210321c5e47bcf7dc779e6645d3afc6392556a9478741c2b0ca/Screen-Shot-2021-09-13-at-10.56.44.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1080/q/94/i/2c61be3b365ab670b66d3496dbaf777db607ffd281904cbc9cdf4643749937ff/Sticker_PNG_01.gif">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/800/q/94/i/d594ab0f4ed6baa29865c2406d38b649ed29a4ffebb3782e5edb97b3894f63fc/Pull-Bear_Posca_Frame_9_Shoes-2.gif">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/d5c170a49b03005d952e6e2f6e9a4ac7f48ea9d8467379a275d422d21b8fab75/Screen-Shot-2021-01-15-at-16.37.22.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1080/q/94/i/19ee74c9808212cc96725e32419ec9f21a7822c0594be69c22533a46f30fd520/GY_psykou_03-01.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/f3d7ffc01a8731221ad9813826ad3f14c163c0132b97cc9f6ea43f15e0e0732d/05.jpg">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/964031aef0dacc6e005adcd41a3c2d207e8f63a608f15985d5a237e5f23f984d/Untitled-3-01.jpg">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/5c628112f618de8f69534edeee3f71a8962bd3550fdc502b0a84c162ce8e1fcf/logo_final-15.jpg">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1194/q/94/i/60d02a93db4363cb382508f23a21542d420c74c2e7f416dd033b709b743ccf98/Screen-Shot-2019-11-23-at-15.13.55.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/6c6592e13881e8625bccfe1b5f68b4512c6a70b9c772d9864171996bff83ce89/DESTIJL_2.png">
+    </div>
+    <div class="col-6">
+      <img class="thumbnail" src="//freight.cargo.site/w/1500/q/75/i/78926f316177767963f1a0a051b0f3fabf0dfd0c8fb71265898b9592391bb43f/sketch_01-01.jpg">
+    </div>
+  </div>
+  <!-- Footer -->
+  <footer></footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
