--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@
   <nav>
     <ul class="nav">
       <li class="nav-item col-3">
-        <a class="nav-link" href="#">Sambeo</a>
+        <a class="nav-link" href="/index.html">Sambeo</a>
       </li>
       <li class="nav-item col-3">
-        <a class="nav-link" href="/about.html">About</a>
+        <a class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item col-3">
         <a class="nav-link" href="#">Typeface</a>
@@ -28,20 +28,88 @@
       </li>
     </ul>
   </nav>
-  <!-- Introduce -->
-  <div class="introduce">
-    <div class="text-center">
-      <h1>Sambeo (Thu Phuong Nguyen Hong) is a multidisciplinary designer based in Vietnam — Germany, who loves to share and make workshops. She is also co-founder of Fustic.Studio & RiceorDie.</h1>
-      <br>
-      <h1><i class="bi-arrow-down" style="font-size: 2.5rem;"></i>
-      </h1>
-    </div>
-    <div class="d-flex justify-content-between">
-      <div class="description">
-        <h3>— Focus on: Corporate Design Type Design Visual & Motion Design</h3>
+  <!-- About -->
+  <div class="bg-main text-black">
+    <div class="row about gy-5">
+      <div class="col-4">
+        <h2 class="mb-4">— Bio</h2>
+        <p> 
+          Tra Giang Nguyen (Digital pseudonym: Gydient) - a queer Asian multidisciplinary designer who is also co-founder of Fustic.Studio (Fustic.’s Short Biography). She was born in Vietnam and is based in Germany.<br>
+          Gydient produces contemporary, simple, and efficient digital solutions. Her work was recognized by foremost organizations such as Art Director Club, Creative Boom, Communication Arts, It’s Nice That, Adobe.<br>
+          For the last year, she has been involved in several projects related to type design, kinetic typography, and digital visual identity. Her best known NFT project is Rice or Die.<br>
+          If you are interested in any kind of collaboration, feel free to get in touch. :)
+        </p>
       </div>
-      <div class="description">
-        <h3>“I'm not afraid of the unknown. Life is change, and I adapt. That's how I grow.”</h3>
+      <div class="col-4">
+        <h2 class="mb-4">— Selected Clients:</h2>
+        <p>
+          Adobe<br>
+          Anyways.co<br>
+          Dinamo<br>
+          Fustic.Studio<br>
+          Gatheround<br>
+          Pull&Bear<br>
+          MN-Associates<br>
+          The Smiley Company<br>
+          Typeone Magazine<br>
+          Neuvo Rico Film<br>
+        </p>
+      </div>
+      <div class="col-4">
+        <h2 class="mb-4">— !nterview on</h2>
+        <p>
+          Magazines:<br>
+          It’s Nice That<br>
+          Communication Arts<br>
+          Type One Magazine<br>
+          Creative Boom<br>
+          Girlsclub.asia<br>
+          Diversity Type<br>
+          <br>
+          Youtube:<br>
+          Vietcetera<br>
+          Her Design Stories<br>
+          <br>
+          Spotify:<br>
+          M.A.D Podcast<br>
+          Tay Du Ky Podcast<br>
+        </p>
+      </div>
+      <div class="col-4">
+        <h2 class="mb-4">— Recognitions</h2>
+        <p>
+          2020: Featured on Idol Category<br>
+          2nd Issue TYPEONE Magazine: Kinetic Type<br>
+          <br>
+          2019: Art Directors Club New York (ADC)<br>
+          Merit: Project Agent Orange Typeface<br>
+          <br>
+          2019: Hamburg Department Design - Portfolio Exhibition<br>
+        </p>
+      </div>
+      <div class="col-4">
+        <h2 class="mb-4">— Workshops</h2>
+        <p>
+          2020 Vietnamese Type Design at RMIT University Vietnam. In GRAP2737 (Visual Vocabulary)<br>
+          <br>
+          2019: Host Open Collab (online platform by Patrick Thomas) in Hanoi & Saigon<br>
+          <br>
+          — Upcoming Events:<br>
+          Online Art Talk “Digital Art: Continuous Ramifications and Trends“<br>
+          Location: Vincom Center for Contemporary Art<br>
+          Time: Sat, Sep 18, 20:00 GMT+7<br>
+          Language: Vietnamese<br>
+          Free register<br>
+        </p>
+      </div>
+      <div class="col-4">
+        <h2 class="mb-4">— Soc!al Media</h2>
+        <p>
+          Instagram: Gydient<br>
+          LinkedIn: Gydient<br>
+          Facebook: Gydient<br>
+          Behance: Gydient_<br>
+        </p>
       </div>
     </div>
   </div>
