--- a/contact.html
+++ b/contact.html
@@ -25,20 +25,19 @@
       </li>
     </ul>
   </nav>
-  <!-- Introduce -->
-  <div class="introduce">
-    <div class="text-center">
-      <h1>Sambeo (Thu Phuong Nguyen Hong) is a multidisciplinary designer based in Vietnam — Germany, who loves to share and make workshops. She is also co-founder of Fustic.Studio & RiceorDie.</h1>
-      <br>
-      <h1><i class="bi-arrow-down" style="font-size: 2.5rem;"></i>
-      </h1>
-    </div>
-    <div class="d-flex justify-content-between">
-      <div class="description">
-        <h3>— Focus on: Corporate Design Type Design Visual & Motion Design</h3>
+  <!-- About -->
+  <div class="bg-main text-black">
+    <div class="row contact gx-5">
+      <div class="col-8">
+        <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/78926f316177767963f1a0a051b0f3fabf0dfd0c8fb71265898b9592391bb43f/sketch_01-01.jpg">
       </div>
-      <div class="description">
-        <h3>“I'm not afraid of the unknown. Life is change, and I adapt. That's how I grow.”</h3>
+      <div class="col-4">
+        Email: gydient@gmail.com<br>
+        <br>
+        Or drop me a line on<br>
+        Instagram: <a href="#">Gydient</a><br>
+        <br>
+        If you are interested in any kind of collaboration, feel free to get in touch. :)<br>
       </div>
     </div>
   </div>
