--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <nav>
     <ul class="nav">
       <li class="nav-item col-4">
-        <a class="nav-link" href="/index.html">Sambeo</a>
+        <a class="nav-link" href="#">Sambeo</a>
       </li>
       <li class="nav-item col-4">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/about.html">About</a>
       </li>
       <li class="nav-item col-4">
         <a class="nav-link" href="/contact.html">Contact</a>
