--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link href="/index.css" rel="stylesheet">
+  <link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,9 +43,11 @@
     </div>
   </div>
   <!-- Thumbnails -->
-  <div class="row gx-2 gy-2 m-1">
+  <div class="row gx-2 gy-2 mx-1 mt-0">
     <div class="col-6">
-      <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+      <a href="/product/test.html">
+        <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+      </a>
     </div>
     <div class="col-6">
       <img class="thumbnail" src="//freight.cargo.site/w/800/q/94/i/b19ce1aa7e2d1daba59156be524eafe7b9ce6a879a40f88aa491a0481265e7a3/Nuevo-Rico-3.gif">
