--- a/product/test.html
+++ b/product/test.html
@@ -7,8 +7,8 @@
   <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/index.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
+  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/lightbox.min.css">
 </head>
 
 <body>
@@ -26,8 +26,9 @@
       </li>
     </ul>
   </nav>
-  <!-- About -->
+  <!-- Product -->
   <div class="bg-main text-black">
+    <!-- Nav item -->
     <div class="row item gy-4">
         <div class="col-6">
           <h3><i class="bi-arrow-left" style="font-size: 1.75rem;"></i>Back</h3>
@@ -36,6 +37,7 @@
           <h3 style="text-align: right">Next<i class="bi-arrow-right" style="font-size: 1.75rem;"></i></h3>
         </div>
     </div>
+    <!-- Information -->
     <div class="row item gy-4 gx-5">
       <div class="col-5">
         <h2 class="mb-4">3D Illustration</h2>
@@ -49,41 +51,88 @@
       <div class="col-5">
         <h2 class="mb-4">Project: 2018’s 3D  Collection</h2>
         <p>
-          I have been enjoying 3D illustration as a useful tools to transfer design in different ways since 2018. As a transmedia designer, I spend time to build the simplest component in my 3D work for the most part. Exploring space, color, light and material allow me to have more freedom in my creative process. These artworks were created in C4D and rendered by corona. 
+          I have been enjoying 3D illustration as a useful tools to transfer design in different ways since 2018. As a transmedia designer, I spend time to build the simplest component in my 3D work for the most part. Exploring space, color, light and material allow me to have more freedom in my creative process. These artworks were created in C4D and rendered by corona.
         </p>
       </div>
     </div>
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-          <div class="row">
-              <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid">
-              </a>
-              <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="https://unsplash.it/600.jpg?image=252" class="img-fluid">
-              </a>
-              <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="https://unsplash.it/600.jpg?image=253" class="img-fluid">
-              </a>
-          </div>
-          <div class="row">
-              <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="https://unsplash.it/600.jpg?image=254" class="img-fluid">
-              </a>
-              <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="https://unsplash.it/600.jpg?image=255" class="img-fluid">
-              </a>
-              <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="https://unsplash.it/600.jpg?image=256" class="img-fluid">
-              </a>
-          </div>
+    <!-- Gallery -->
+    <div class="row item gy-4">
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/30ff0d358765ec3180d20b98f72dbe275bbce479953541588e779d37910a94ab/OBJECT.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/30ff0d358765ec3180d20b98f72dbe275bbce479953541588e779d37910a94ab/OBJECT.png" class="img-fluid">
+        </a>
       </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/e354b9254d06514261c894aa0f136d6effc5d4ae9dcf7bf9a429a9830f1b7137/DESTIJL_1.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/e354b9254d06514261c894aa0f136d6effc5d4ae9dcf7bf9a429a9830f1b7137/DESTIJL_1.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/6c6592e13881e8625bccfe1b5f68b4512c6a70b9c772d9864171996bff83ce89/DESTIJL_2.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/6c6592e13881e8625bccfe1b5f68b4512c6a70b9c772d9864171996bff83ce89/DESTIJL_2.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/1cf1e0b101ecef3dedc01a7fe9ee4ddc50c090e55403c039833ce7e1b96e2eb6/Untitled-1.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/1cf1e0b101ecef3dedc01a7fe9ee4ddc50c090e55403c039833ce7e1b96e2eb6/Untitled-1.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/2a6657a6632e92cba780bd2bcb1e2a17bcc4bf30857c38450fd30a8928384b13/GOD.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/2a6657a6632e92cba780bd2bcb1e2a17bcc4bf30857c38450fd30a8928384b13/GOD.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/5ff1184469fcaabfce920a801fcb17589dc2afa943cba53066f1aa6219ddd6ba/Alabaster.jpg" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/5ff1184469fcaabfce920a801fcb17589dc2afa943cba53066f1aa6219ddd6ba/Alabaster.jpg" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/18dcebed82dfd6687b315e4ef66404d257d8b5b2b1a636bc7672070c4c355b0f/A.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/18dcebed82dfd6687b315e4ef66404d257d8b5b2b1a636bc7672070c4c355b0f/A.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/4429b8460dbed6c8f2d4cc8bc89de54736bc84db55e60ebb16c181e6a630f622/B.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/4429b8460dbed6c8f2d4cc8bc89de54736bc84db55e60ebb16c181e6a630f622/B.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/bd876cca0631557525bd9c415bcd84ad7562cad22f5ea4d77472c30ec1087bec/C.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/bd876cca0631557525bd9c415bcd84ad7562cad22f5ea4d77472c30ec1087bec/C.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/c24e726058b03e577b86180dea3de18579313f2ebe428dabcfb0edc5a4cd9573/D.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/c24e726058b03e577b86180dea3de18579313f2ebe428dabcfb0edc5a4cd9573/D.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/0102ddf15b0cfec89f15616c6ded7b3bdaf47f37d5278a050eb404526ba4eba8/E.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/0102ddf15b0cfec89f15616c6ded7b3bdaf47f37d5278a050eb404526ba4eba8/E.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/717cf8a767fa4e6045f01ca8d56e619f55e24b87f9653a111ca5b01cef899b9b/G.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/717cf8a767fa4e6045f01ca8d56e619f55e24b87f9653a111ca5b01cef899b9b/G.png" class="img-fluid">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <a href="//freight.cargo.site/t/original/i/0c474d0a52933d4655edf1ade94be272efcfdbc6ff135d00254bfcf0c9c9da03/H.png" data-lightbox="gallery" data-title="helu" class="col-sm-4">
+          <img src="//freight.cargo.site/t/original/i/0c474d0a52933d4655edf1ade94be272efcfdbc6ff135d00254bfcf0c9c9da03/H.png" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <div class="row item gy-4 text-center">
+      <p>Thank you for watching!</p>
     </div>
   </div>
   <!-- Thumbnails -->
-  <div class="row gx-2 gy-2 m-1">
+  <div class="row gx-2 gy-2 mx-1 mt-0">
     <div class="col-6">
-      <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+      <a href="/product/test.html">
+        <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+      </a>
     </div>
     <div class="col-6">
       <img class="thumbnail" src="//freight.cargo.site/w/800/q/94/i/b19ce1aa7e2d1daba59156be524eafe7b9ce6a879a40f88aa491a0481265e7a3/Nuevo-Rico-3.gif">
@@ -140,23 +189,7 @@
   <!-- Footer -->
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
-  <script>
-    $(document).on('click', '[data-toggle="lightbox"]', function(event) {
-      console.log('fuck')
-      event.preventDefault();
-      $(this).ekkoLightbox({
-        alwaysShowClose: true,
-        onShown: function() {
-          console.log('Checking our the events huh?');
-        },
-        onNavigate: function(direction, itemIndex) {
-          console.log('Navigating '+direction+'. Current item: '+itemIndex);
-        }
-      });
-    });
-  </script>
+  <script src="/js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
