--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link href="/index.css" rel="stylesheet">
+  <link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     <div class="row about gy-5">
       <div class="col-4">
         <h2 class="mb-4">— Bio</h2>
-        <p> 
+        <p>
           Tra Giang Nguyen (Digital pseudonym: Gydient) - a queer Asian multidisciplinary designer who is also co-founder of Fustic.Studio (Fustic.’s Short Biography). She was born in Vietnam and is based in Germany.<br>
           Gydient produces contemporary, simple, and efficient digital solutions. Her work was recognized by foremost organizations such as Art Director Club, Creative Boom, Communication Arts, It’s Nice That, Adobe.<br>
           For the last year, she has been involved in several projects related to type design, kinetic typography, and digital visual identity. Her best known NFT project is Rice or Die.<br>
@@ -111,9 +111,11 @@
     </div>
   </div>
   <!-- Thumbnails -->
-  <div class="row gx-2 gy-2 m-1">
+  <div class="row gx-2 gy-2 mx-1 mt-0">
     <div class="col-6">
-      <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+      <a href="/product/test.html">
+        <img class="thumbnail" src="//freight.cargo.site/w/2000/q/75/i/056fadcc92ddb884901a89bfd22e672619f354328f23eb678f694800096a304c/Behance_Adobe_Max.jpg">
+      </a>
     </div>
     <div class="col-6">
       <img class="thumbnail" src="//freight.cargo.site/w/800/q/94/i/b19ce1aa7e2d1daba59156be524eafe7b9ce6a879a40f88aa491a0481265e7a3/Nuevo-Rico-3.gif">
